ChangeLog for Simple Python Fixed-Point Module

18Jan06	- added unit-test for __str__ method

17Jan06	- converted resolution information to shareable FPfamily object

16Jan06	- added test for __nonzero__ method & patched reference to 'other'
	removed __iadd__, __isub__ methods to make immutable object
	added unit-test for immutability

15Jan07	- *** spfpm-0.2 released

13Jan07	- added basic Makefile for building release packages
	added unit-tests for pow() and sincos() methods

08Jan07	- added logarithm methods

03Jan07	- added basic unit-testing class for arithmetic operations

02Jan07	- converted RCS repository into SVN

26Dec06	- *** prototype of spfpm-0.1 released

## $Revision$, $Date$