@@ -30,9 +30,9 @@ class FixedPointTest(unittest.TestCase):
 
     def testBoolConditions(self):
         """values used in boolean expressions should behave as true/false"""
-        if FixedPoint.FPnum(0):
+        if FixedPoint.FXnum(0):
             self.fail()
-        if FixedPoint.FPnum(1):
+        if FixedPoint.FXnum(1):
             pass
         else:
             self.fail()
@@ -42,38 +42,54 @@ class FixedPointTest(unittest.TestCase):
         """arithmetic operations on object should not alter orignal value"""
         scale = 0.297
         for i in range(-8, 8):
-            orig = FixedPoint.FPnum(i * scale)
+            orig = FixedPoint.FXnum(i * scale)
 
-            x = FixedPoint.FPnum(i * scale)
+            x = FixedPoint.FXnum(i * scale)
             x0 = x
             if x is x0:
                 pass
             else:
                 self.fail()
 
-            x = FixedPoint.FPnum(i * scale)
+            x = FixedPoint.FXnum(i * scale)
             x0 = x
             x += 1
             self.assertEqual(orig, x0)
             if x is x0: self.fail()
 
-            x = FixedPoint.FPnum(i * scale)
+            x = FixedPoint.FXnum(i * scale)
             x0 = x
             x -= 1
             self.assertEqual(orig, x0)
             if x is x0: self.fail()
 
-            x = FixedPoint.FPnum(i * scale)
+            x = FixedPoint.FXnum(i * scale)
             x0 = x
             x *= 2
             self.assertEqual(orig, x0)
             if x is x0: self.fail()
 
-            x = FixedPoint.FPnum(i * scale)
+            x = FixedPoint.FXnum(i * scale)
             x0 = x
             x /= 2
             self.assertEqual(orig, x0)
             if x is x0: self.fail()
+
+    def testConversion(self):
+        """check that conversion between families preserves values"""
+        famlist = [FixedPoint.FXfamily(b) for b in [32, 40, 48, 80, 120]]
+        for i in range(1,10):
+            xpos = (float)(1 << (2 * i)) + 1.0 / (1 << i);
+            for x in [xpos, -xpos]:
+               for fam0 in famlist:
+                    fp0 = FixedPoint.FXnum(x, fam0)
+                    for fam1 in famlist:
+                        fp1 = FixedPoint.FXnum(fp0, fam1)
+                        try: f = (fp0 == fp1)
+                        except FixedPoint.FXexception: self.failIf(fam0 is fam1)
+                        else: self.failUnless(fam0 is fam1)
+                        self.assertAlmostEqual(x, float(fp0))
+                        self.assertAlmostEqual(x, float(fp1))
 
     def testPrinting(self):
         """check conversion to string"""
@@ -81,17 +97,17 @@ class FixedPointTest(unittest.TestCase):
             v = 2 ** i
             for x in [v, 1.0/v]:
                 fpa = "%.8g" % x
-                fpx = str(FixedPoint.FPnum(x))
+                fpx = str(FixedPoint.FXnum(x))
                 self.assertEqual(fpa, fpx)
 
     def testAddition(self):
         """addition operators should promote & commute"""
         scale = 0.125
         for x in range(-16, 16):
-            fpx = FixedPoint.FPnum(x * scale)
+            fpx = FixedPoint.FXnum(x * scale)
             for y in range(-32, 32):
-                fpy = FixedPoint.FPnum(y * scale)
-                fpa = FixedPoint.FPnum((x + y) * scale)
+                fpy = FixedPoint.FXnum(y * scale)
+                fpa = FixedPoint.FXnum((x + y) * scale)
 
                 # compute various forms of a = (x + y):
 
@@ -114,10 +130,10 @@ class FixedPointTest(unittest.TestCase):
         """subtraction operators should promote & anti-commute"""
         scale = 0.0625
         for x in range(-32, 16):
-            fpx = FixedPoint.FPnum(x * scale)
+            fpx = FixedPoint.FXnum(x * scale)
             for y in range(-16, 32):
-                fpy = FixedPoint.FPnum(y * scale)
-                fpa = FixedPoint.FPnum((x - y) * scale)
+                fpy = FixedPoint.FXnum(y * scale)
+                fpa = FixedPoint.FXnum((x - y) * scale)
 
                 # compute various forms of a = (x - y):
 
@@ -141,10 +157,10 @@ class FixedPointTest(unittest.TestCase):
         scale = 0.25
         scale2 = scale * scale
         for x in range(-16, 32):
-            fpx = FixedPoint.FPnum(x * scale)
+            fpx = FixedPoint.FXnum(x * scale)
             for y in range(-32, 16):
-                fpy = FixedPoint.FPnum(y * scale)
-                fpa = FixedPoint.FPnum((x * y) * scale2)
+                fpy = FixedPoint.FXnum(y * scale)
+                fpa = FixedPoint.FXnum((x * y) * scale2)
 
                 # compute various forms of a = (x * y):
 
@@ -169,11 +185,11 @@ class FixedPointTest(unittest.TestCase):
         scale2 = scale * scale
         for a in range(-32, 32):
             if a == 0: continue
-            fpa = FixedPoint.FPnum(a * scale)
+            fpa = FixedPoint.FXnum(a * scale)
             for y in range(-16, 16):
                 if y == 0: continue
-                fpy = FixedPoint.FPnum(y * scale)
-                fpx = FixedPoint.FPnum((y * a) * scale2)
+                fpy = FixedPoint.FXnum(y * scale)
+                fpx = FixedPoint.FXnum((y * a) * scale2)
 
                 # compute various forms of a = (x / y):
 
@@ -193,22 +209,22 @@ class FixedPointTest(unittest.TestCase):
 
     def testFamilyProtection(self):
         """check that arithmetic operators do not transmute resolution families"""
-        famlist = [FixedPoint.FPfamily(res) for res in [8, 16, 40, 90]]
+        famlist = [FixedPoint.FXfamily(res) for res in [8, 16, 40, 90]]
         for fam0 in famlist:
             for fam1 in famlist:
-                x = FixedPoint.FPnum(2, fam0)
-                y = FixedPoint.FPnum(3, fam1)
+                x = FixedPoint.FXnum(2, fam0)
+                y = FixedPoint.FXnum(3, fam1)
                 try: a = x + y
-                except FixedPoint.FPexception: self.failIf(fam0 is fam1)
+                except FixedPoint.FXexception: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
                 try: a = x - y
-                except FixedPoint.FPexception: self.failIf(fam0 is fam1)
+                except FixedPoint.FXexception: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
                 try: a = x * y
-                except FixedPoint.FPexception: self.failIf(fam0 is fam1)
+                except FixedPoint.FXexception: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
                 try: a = x / y
-                except FixedPoint.FPexception: self.failIf(fam0 is fam1)
+                except FixedPoint.FXexception: self.failIf(fam0 is fam1)
                 else: self.failUnless(fam0 is fam1)
 
     def testExp(self):
@@ -217,7 +233,7 @@ class FixedPointTest(unittest.TestCase):
         for i in range(-32, 32):
             x = i * scale
             exp_true = math.exp(x)
-            exp = FixedPoint.FPnum(x).exp()
+            exp = FixedPoint.FXnum(x).exp()
             self.assertAlmostEqual(exp_true, exp)
 
 
@@ -232,7 +248,7 @@ class FixedPointTest(unittest.TestCase):
                 else:
                     x = base ** i
                 log_true = math.log(x)
-                log = FixedPoint.FPnum(x).log()
+                log = FixedPoint.FXnum(x).log()
                 self.assertAlmostEqual(log_true, log)
 
 
@@ -241,7 +257,7 @@ class FixedPointTest(unittest.TestCase):
         scale = 0.27
         for i in range(-32, 32):
             x = i * scale
-            exp = FixedPoint.FPnum(x).exp()
+            exp = FixedPoint.FXnum(x).exp()
             logexp = exp.log()
             self.assertAlmostEqual(x, float(logexp))
 
@@ -251,12 +267,12 @@ class FixedPointTest(unittest.TestCase):
         scale2 = 0.382
         for i in range(1, 32):
             x = i * scale
-            pow = FixedPoint.FPnum(0) ** x
-            self.assertEqual(FixedPoint.FPnum(1), pow)
+            pow = FixedPoint.FXnum(0) ** x
+            self.assertEqual(FixedPoint.FXnum(1), pow)
             for j in range(-16, 16):
                 y = j * scale2
                 pow_true = math.pow(x, y)
-                pow = FixedPoint.FPnum(x) ** y
+                pow = FixedPoint.FXnum(x) ** y
                 self.assertAlmostEqual(pow_true, pow)
 
 
@@ -267,7 +283,7 @@ class FixedPointTest(unittest.TestCase):
             x = i * scale
             sin_true = math.sin(x)
             cos_true = math.cos(x)
-            (sin, cos) = FixedPoint.FPnum(x).sincos()
+            (sin, cos) = FixedPoint.FXnum(x).sincos()
             self.assertAlmostEqual(sin_true, sin)
             self.assertAlmostEqual(cos_true, cos)
 
